--- a/Extract_Pdf_Attrib_from_list.ipynb
+++ b/Extract_Pdf_Attrib_from_list.ipynb
@@ -64,7 +64,7 @@
     "        if page_number < 1 or page_number > len(doc):\n",
     "            print(f\"エラー: ページ番号が総ページ数{len(doc)}を超えています。最終ページを対象に処理を進めます。\")\n",
     "            logging.warning(f\"ページ番号が総ページ数{len(doc)}を超えています。最終ページを対象に処理を進めます。\")\n",
-    "            page_number =　len(doc)\n",
+    "            page_number = len(doc)\n",
     "        \n",
     "        # 対象ページを取得（0インデックス）\n",
     "        page = doc[page_number - 1]\n",
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "918f384a-b954-44aa-8a64-54e93e98ebc1",
    "metadata": {},
    "outputs": [],
@@ -213,11 +213,15 @@
     "        y0_values = group[\"y0\"].values\n",
     "        if len(y0_values) == 0:\n",
     "            continue\n",
+    "        y1_values = group[\"y1\"].values\n",
+    "        if len(y1_values) == 0:\n",
+    "            continue\n",
     "\n",
     "        min_y0, max_y0 = np.min(y0_values), np.max(y0_values)\n",
+    "        min_y1, max_y1 = np.min(y1_values), np.max(y1_values)\n",
     "\n",
-    "        # ヘッダ候補: y0 が分布の下位 (小さい値)\n",
-    "        header_candidates = group[np.abs(group[\"y0\"] - min_y0) < threshold]\n",
+    "        # ヘッダ候補: y1 が分布の下位 (小さい値)\n",
+    "        header_candidates = group[np.abs(group[\"y1\"] - min_y1) < threshold]\n",
     "        headers.append(header_candidates)\n",
     "\n",
     "        # フッタ候補: y0 が分布の上位 (大きい値)\n",
@@ -229,7 +233,7 @@
     "    footers = pd.concat(footers, ignore_index=True)\n",
     "\n",
     "    # 頻出パターンを確認 (x0, y0, text を基準にグループ化)\n",
-    "    header_patterns = headers.groupby([\"x0\", \"y0\", \"text\"]).size().reset_index(name=\"count\")\n",
+    "    header_patterns = headers.groupby([\"x1\", \"y1\", \"text\"]).size().reset_index(name=\"count\")\n",
     "    footer_patterns = footers.groupby([\"x0\", \"y0\", \"text\"]).size().reset_index(name=\"count\")\n",
     "\n",
     "    return header_patterns, footer_patterns\n"
@@ -237,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "e8bc153c-081c-4e35-9c9c-a5379366f9ac",
    "metadata": {},
    "outputs": [
@@ -409,8 +413,8 @@
     "        headers, footers = identify_header_footer(df_pdf_all_pages)\n",
     "    \n",
     "        # 結果をソートして表示\n",
-    "        headers_sorted = headers.sort_values(\"count\", ascending=False)\n",
-    "        footers_sorted = footers.sort_values(\"count\", ascending=False)\n",
+    "        headers_sorted = headers.sort_values(\"y1\", ascending=True)\n",
+    "        footers_sorted = footers.sort_values(\"y0\", ascending=True)\n",
     "    \n",
     "        #print(\"Identified Header Patterns:\")\n",
     "        #print(headers_sorted)\n",
