--- a/M-col-PDF2TXT_from_list.ipynb
+++ b/M-col-PDF2TXT_from_list.ipynb
@@ -21,6 +21,7 @@
     "import os\n",
     "from concurrent.futures import ThreadPoolExecutor, as_completed\n",
     "import logging\n",
+    "import html\n",
     "\n",
     "# ログファイルの設定\n",
     "log_filename = \"data/logfile_Pdf2Txt.log\"\n",
@@ -160,12 +161,16 @@
     "\n",
     "    # 最終的な改行の調整\n",
     "    text = re.sub(r\"\\n{3,}\", \"\\n\\n\", text).strip()\n",
-    "    return text"
+    "\n",
+    "    # 特殊文字をエスケープ\n",
+    "    escaped_text = html.escape(text)\n",
+    "\n",
+    "    return escaped_text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "275688e7-516e-4643-b87d-549ee18c539e",
    "metadata": {},
    "outputs": [
@@ -173,8 +178,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-02-19 15:56:32,816 - INFO - ==== Processing ir/2025/40610_デンカ/denkareport2024.pdf ====\n",
-      "2025-02-19 15:56:41,164 - INFO - File 'ir/2025/40610_デンカ/denkareport2024.txt' was saved.\n"
+      "2025-02-26 23:53:59,227 - INFO - ==== Processing ir/2025/40610_デンカ/denkareport2024.pdf ====\n",
+      "2025-02-26 23:54:07,853 - INFO - File 'ir/2025/40610_デンカ/denkareport2024.txt' was saved.\n"
      ]
     }
    ],
@@ -285,14 +290,17 @@
     "        \n",
     "        # PDFからテキストを抽出し、クリーニング\n",
     "        cleaned_text = \"\"\n",
+    "        cleaned_text += f\"<Documents>\"\n",
     "        \n",
     "        for page_number, page in enumerate(doc, start=0):\n",
     "            # ページ開始タグ\n",
-    "            cleaned_text += f\"<page {page_number}>\\n\"\n",
+    "            cleaned_text += f\"<section type='page' n='{page_number}'>\\n\"\n",
     "            # ページ内容（新しいx0_rangesによる処理）\n",
     "            cleaned_text += clean_text_by_attributes(page, header_y, footer_y, left_margin_x, right_margin_x, column_thresholds, line_spacing_factor) + \"\\n\"\n",
     "            # ページ終了タグ\n",
-    "            cleaned_text += f\"</page {page_number}>\\n\\n\"\n",
+    "            cleaned_text += f\"</section>\\n\\n\"\n",
+    "\n",
+    "        cleaned_text += f\"</Documents>\"\n",
     "        \n",
     "        # 出力ファイルパス\n",
     "        output_file_path = pdf_path[:len(pdf_path)-4] + \".txt\"\n",
