--- a/Extract_Pdf_Attrib_from_list.ipynb
+++ b/Extract_Pdf_Attrib_from_list.ipynb
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "918f384a-b954-44aa-8a64-54e93e98ebc1",
    "metadata": {},
    "outputs": [],
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "e8bc153c-081c-4e35-9c9c-a5379366f9ac",
    "metadata": {},
    "outputs": [
@@ -249,8 +249,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "==== Processing ir/2025/40610_デンカ/denkareport2024.pdf ====\n",
-      "ir/2025/40610_デンカ/denkareport2024.pdfの処理が終了しました。\n"
+      "==== Processing ir/2025/temp/250122研修会「ブランド価値評価とブランディングの推進（集合Zoomウェビナー）」配布資料.pdf ====\n",
+      "ir/2025/temp/250122研修会「ブランド価値評価とブランディングの推進（集合Zoomウェビナー）」配布資料.pdfの処理が終了しました。\n"
      ]
     }
    ],
@@ -262,7 +262,7 @@
     "    #csv_path = 'data/Attrib_Analysis_Target_20250114_test.csv'\n",
     "    #csv_path = 'data/Attrib_Analysis_Target_20250218.csv'\n",
     "    #csv_path = 'data/Attrib_Analysis_Target_20250218b.csv'\n",
-    "    csv_path = 'data/Attrib_Analysis_Target_20250219_Denka.csv'  # CSVのパスを指定\n",
+    "    csv_path = 'data/Attrib_Analysis_Target_20250228_temp.csv'  # CSVのパスを指定\n",
     "    \n",
     "\n",
     "    # CSVを読み込む\n",
