--- a/M-col-PDF2TXT_from_list.ipynb
+++ b/M-col-PDF2TXT_from_list.ipynb
@@ -178,8 +178,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-02-26 23:53:59,227 - INFO - ==== Processing ir/2025/40610_デンカ/denkareport2024.pdf ====\n",
-      "2025-02-26 23:54:07,853 - INFO - File 'ir/2025/40610_デンカ/denkareport2024.txt' was saved.\n"
+      "2025-02-28 07:45:25,053 - INFO - ==== Processing ir/2025/temp/250122研修会「ブランド価値評価とブランディングの推進（集合Zoomウェビナー）」配布資料.pdf ====\n",
+      "2025-02-28 07:45:27,055 - INFO - File 'ir/2025/temp/250122研修会「ブランド価値評価とブランディングの推進（集合Zoomウェビナー）」配布資料.txt' was saved.\n"
      ]
     }
    ],
@@ -187,7 +187,8 @@
     "def main():\n",
     "    # CSVファイルのパス\n",
     "    #csv_path = 'data/Attrib_Analysis_Target_20250114_test.csv'  # CSVのパスを指定\n",
-    "    csv_path = 'data/Attrib_Analysis_Target_20250219_Denka.csv'  # CSVのパスを指定\n",
+    "    #csv_path = 'data/Attrib_Analysis_Target_20250219_Denka.csv'  # CSVのパスを指定\n",
+    "    csv_path = 'data/Attrib_Analysis_Target_20250228_temp.csv'  # CSVのパスを指定\n",
     "\n",
     "    # 統合報告書がリストされたCSVを読み込む\n",
     "    df_target = load_csv(csv_path)\n",
