--- a/Extract_Pdf_Attrib_from_list.ipynb
+++ b/Extract_Pdf_Attrib_from_list.ipynb
@@ -7,9 +7,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"\n",
     "# CSVファイルに記載したフォルダ・PDFファイル名を読み込み、\n",
     "# PDFファイルのテキストの属性情報をinfoフォルダに格納\n",
-    "\n",
+    "#　XMLデータ作成に必要な\n",
+    " ・マージン設定情報（margin.csv）\n",
+    " ・読込時の段組設定情報（multicolumn.txt）\n",
+    " ・目次タグ情報（content.csv）\n",
+    " を生成\n",
+    "\"\"\"\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import MeCab\n",
@@ -242,6 +248,72 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "20ced6a8-d882-408e-bac0-2ce8b3f0e687",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_margin_csv(margin_info_path):\n",
+    "\n",
+    "    #=============================================\n",
+    "    #テキスト取得時に参照するmargin.csvファイルを作成\n",
+    "    #既に存在する場合はスキップ（書き込み情報の上書き防止のため）\n",
+    "    #margin.csvが存在しない場合には、ブランクのcsvを書き込み\n",
+    "    # チェックと生成\n",
+    "    if not os.path.exists(margin_info_path):\n",
+    "        # データを作成 (全てNone)\n",
+    "        margin_init = {\n",
+    "            \"header_y\": [None],\n",
+    "            \"footer_y\": [None],\n",
+    "            \"left_margin_x\": [None],\n",
+    "            \"right_margin_x\": [None]\n",
+    "        }\n",
+    "        df_margin = pd.DataFrame(margin_init)\n",
+    "        # CSVファイルを保存\n",
+    "        df_margin.to_csv(margin_info_path, index=False, encoding=\"utf_8_sig\")\n",
+    "        #print(f\"{margin_info_path} を新新規作成しました。\")\n",
+    "        logging.info(f\"{margin_info_path} を新規作成しました。\")\n",
+    "\n",
+    "    else:\n",
+    "        #print(f\"{margin_info_path} は既に存在しています。\")    \n",
+    "        logging.warning(f\"{margin_info_path} は既に存在しています。\")    \n",
+    "\n",
+    "def make_multicolumn_txt(multicolumn_info_path):\n",
+    "    #=============================================\n",
+    "    #テキスト取得時に参照する multicolumn.txtファイルを作成\n",
+    "    #既に存在する場合はスキップ（書き込み情報の上書き防止のため）\n",
+    "    # multicolumn.txtが存在しない場合には、ブランクのtxtを書き込み\n",
+    "    # チェックと生成\n",
+    "    if not os.path.exists(multicolumn_info_path):\n",
+    "        # 空のテキストファイルを作成\n",
+    "        with open(multicolumn_info_path,\"w\", encoding=\"utf_8_sig\") as f:\n",
+    "            pass\n",
+    "        logging.info(f\"{multicolumn_info_path} を新規作成しました。\")\n",
+    "    else:\n",
+    "        logging.warning(f\"{multicolumn_info_path} は既に存在しています。\")    \n",
+    "\n",
+    "def make_contents_csv(contents_path):\n",
+    "    #=============================================\n",
+    "    #目次情報を記載するcontents.csvファイルを作成\n",
+    "    #既に存在する場合はスキップ（書き込み情報の上書き防止のため）\n",
+    "    # チェックと生成\n",
+    "    if not os.path.exists(contents_path):\n",
+    "        # データを作成 (初期値で表紙を設定)\n",
+    "        contents_init = {\n",
+    "            \"keyword\": [\"表紙\"],\n",
+    "            \"page\": [1]\n",
+    "        }\n",
+    "        df_contents = pd.DataFrame(contents_init)\n",
+    "        # CSVファイルを保存\n",
+    "        df_contents.to_csv(contents_path, index=False, encoding=\"utf_8_sig\")\n",
+    "        logging.info(f\"{contents_path} を新規作成しました。\")\n",
+    "    else:\n",
+    "        #print(f\"{margin_info_path} は既に存在しています。\")    \n",
+    "        logging.warning(f\"{contents_path} は既に存在しています。\")    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "e8bc153c-081c-4e35-9c9c-a5379366f9ac",
    "metadata": {},
    "outputs": [
@@ -249,8 +321,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "==== Processing ir/2025/temp/250122研修会「ブランド価値評価とブランディングの推進（集合Zoomウェビナー）」配布資料.pdf ====\n",
-      "ir/2025/temp/250122研修会「ブランド価値評価とブランディングの推進（集合Zoomウェビナー）」配布資料.pdfの処理が終了しました。\n"
+      "Reading ir/2025/20020_日清製粉グループ本社/Gx5z.pdf \n",
+      "処理が終了しました。\n"
      ]
     }
    ],
@@ -261,8 +333,10 @@
     "    # CSVファイルのパス\n",
     "    #csv_path = 'data/Attrib_Analysis_Target_20250114_test.csv'\n",
     "    #csv_path = 'data/Attrib_Analysis_Target_20250218.csv'\n",
+    "    #csv_path = 'data/Attrib_Analysis_Target_20250228_temp.csv'  # CSVのパスを指定\n",
     "    #csv_path = 'data/Attrib_Analysis_Target_20250218b.csv'\n",
-    "    csv_path = 'data/Attrib_Analysis_Target_20250228_temp.csv'  # CSVのパスを指定\n",
+    "    #csv_path = 'data/Attrib_Analysis_Target_20250218c.csv'\n",
+    "    csv_path = 'data/Attrib_Analysis_Target_20250314.csv'\n",
     "    \n",
     "\n",
     "    # CSVを読み込む\n",
@@ -301,8 +375,8 @@
     "            file_path =''\n",
     "            return\n",
     "\n",
-    "        print(f\"==== Processing {folder_name}/{file_name} ====\")\n",
-    "        logging.info(f\"==== Processing {folder_name}/{file_name} ====\")\n",
+    "        print(f\"Reading {folder_name}/{file_name} \")\n",
+    "        logging.info(f\"Reading {folder_name}/{file_name} \")\n",
     "\n",
     "        #属性情報を格納するフォルダ（info）の有無を確認、なければ作成\n",
     "        info_file_path = folder_name + '/' + 'info'\n",
@@ -432,43 +506,18 @@
     "\n",
     "        #=============================================\n",
     "        #テキスト取得時に参照するmargin.csvファイルを作成\n",
-    "        #既に存在する場合はスキップ（書き込み情報の上書き防止のため）\n",
-    "         #margin.csvが存在しない場合には、ブランクのcsvを書き込み\n",
-    "        # チェックと生成\n",
     "        margin_info_path = info_file_path + \"/\" + \"margin.csv\"\n",
-    "        if not os.path.exists(margin_info_path):\n",
-    "            # データを作成 (全てNone)\n",
-    "            margin_init = {\n",
-    "                \"header_y\": [None],\n",
-    "                \"footer_y\": [None],\n",
-    "                \"left_margin_x\": [None],\n",
-    "                \"right_margin_x\": [None]\n",
-    "            }\n",
-    "            df_margin = pd.DataFrame(margin_init)\n",
-    "            # CSVファイルを保存\n",
-    "            df_margin.to_csv(margin_info_path, index=False)\n",
-    "            #print(f\"{margin_info_path} を新新規作成しました。\")\n",
-    "            logging.info(f\"{margin_info_path} を新規作成しました。\")\n",
-    "\n",
-    "        else:\n",
-    "            #print(f\"{margin_info_path} は既に存在しています。\")    \n",
-    "            logging.warning(f\"{margin_info_path} は既に存在しています。\")    \n",
-    "\n",
+    "        make_margin_csv(margin_info_path)\n",
     "        #=============================================\n",
     "        #テキスト取得時に参照する multicolumn.txtファイルを作成\n",
-    "        #既に存在する場合はスキップ（書き込み情報の上書き防止のため）\n",
-    "        # multicolumn.txtが存在しない場合には、ブランクのtxtを書き込み\n",
-    "        # チェックと生成\n",
     "        multicolumn_info_path = info_file_path + \"/\" + \"multicolumn.txt\"\n",
-    "        if not os.path.exists(multicolumn_info_path):\n",
-    "            # 空のテキストファイルを作成\n",
-    "            with open(multicolumn_info_path,\"w\"):pass\n",
-    "            logging.info(f\"{multicolumn_info_path} を新規作成しました。\")\n",
-    "        else:\n",
-    "            logging.warning(f\"{multicolumn_info_path} は既に存在しています。\")    \n",
+    "        make_multicolumn_txt(multicolumn_info_path)\n",
+    "        #=============================================\n",
+    "        #目次情報を記載するcontents.csvファイルを作成\n",
+    "        contents_path = info_file_path + \"/\" + \"contents.csv\"\n",
+    "        make_contents_csv(contents_path)\n",
     "\n",
-    "        \n",
-    "        print(f\"{file_path}の処理が終了しました。\")\n",
+    "    print(f\"処理が終了しました。\")\n",
     "        \n",
     "if __name__ == \"__main__\":\n",
     "    main()\n",
