--- a/Extract_Pdf_Attrib_from_list.ipynb
+++ b/Extract_Pdf_Attrib_from_list.ipynb
@@ -321,7 +321,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reading ir/2025/20020_日清製粉グループ本社/Gx5z.pdf \n",
+      "Reading ir/2025/69760_太陽誘電/EpSk.pdf \n",
+      "Reading ir/2025/69760_太陽誘電/EpSk.pdf \n",
       "処理が終了しました。\n"
      ]
     }
@@ -336,7 +337,8 @@
     "    #csv_path = 'data/Attrib_Analysis_Target_20250228_temp.csv'  # CSVのパスを指定\n",
     "    #csv_path = 'data/Attrib_Analysis_Target_20250218b.csv'\n",
     "    #csv_path = 'data/Attrib_Analysis_Target_20250218c.csv'\n",
-    "    csv_path = 'data/Attrib_Analysis_Target_20250314.csv'\n",
+    "    #csv_path = 'data/Attrib_Analysis_Target_20250314.csv'\n",
+    "    csv_path = 'data/Attrib_Analysis_Target_20250408.csv'\n",
     "    \n",
     "\n",
     "    # CSVを読み込む\n",
