--- a/M-col-PDF2TXT_from_list.ipynb
+++ b/M-col-PDF2TXT_from_list.ipynb
@@ -295,7 +295,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processing ir/2025/20020_日清製粉グループ本社/Gx5z.pdf\n",
+      "Processing ir/2025/72760_小糸製作所/8d0b34baa07db41a5a718ac9ec40e985ba10138f.pdf\n",
       "処理が終了しました。\n"
      ]
     }
@@ -322,9 +322,13 @@
     "            return\n",
     "\n",
     "    elif Process_Mode ==1:\n",
+    "        #=========================================================================================\n",
+    "        #-----------------------------------------------------------------------------------------\n",
     "        #単独処理：格納フォルダ、統合報告書PDFのファイル名、行間設定を指定\n",
-    "        temp_list = ['20020_日清製粉グループ本社','Gx5z.pdf' , 2]\n",
+    "        temp_list = ['72760_小糸製作所', '8d0b34baa07db41a5a718ac9ec40e985ba10138f.pdf', 2]\n",
     "        df_target = pd.DataFrame([temp_list],columns=['格納フォルダ','統合報告書PDF','行間設定'])\n",
+    "        #-----------------------------------------------------------------------------------------\n",
+    "        #=========================================================================================\n",
     "\n",
     "    else:\n",
     "        print('Process_Modeは \"0\" または \"1\" を指定してください。')\n",
@@ -440,7 +444,10 @@
     "            #====================================\n",
     "            #不要な特定文字列の除去\n",
     "            #XML作成時にエラー（ExpatError: not well-formed (invalid token)）が起こる時は、raw_textから該当文字列を探して除去\n",
-    "            cleaned_text[page_number +1] = re.sub(r\"[ʝ\u0007\u0001\b]+\", \"\", tmp_text)\n",
+    "            cleaned_text[page_number +1] = re.sub(r\"[ʝ\u0007\u0001\b\u0003\u001f\u001e",
+    "\u001d",
+    "\u001c",
+    "\u001b\u001a\u0019\u001a\u0018\u001b\u0017\u0016\u0017\u0015]+\", \"\", tmp_text)\n",
     "            #====================================\n",
     "            \n",
     "            cleaned_raw_text += cleaned_text[page_number +1]\n",
