--- a/Tmp_Extract_Tagged-txt.ipynb
+++ b/Tmp_Extract_Tagged-txt.ipynb
@@ -2,36 +2,118 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "79d4094c-e37c-471d-864c-60c43dd9c967",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "=== タグ: Target_A ===\n",
+      "「ASICS統合報告書2020」の発行にあたって\n",
+      "　アシックスとして初の統合報告書発行にあたり、アシックスの中長期の企業価値創造に関わる重要性の高い情報を網羅的に整理いたしました。その中で特に2020年10月公表した長期ビジョン「VISION2030」、その実現に向けて新たにスタートした「中期経営計画2023」にフォーカスし、外部環境が大きく変化する状況下においてアシックスの進むべき方向性とその実現に向けた戦略をご説明しています。　本報告書は、財務・IRチームが中心となり、関係部署との協力のもとで編集方針や掲載内容を議論しています。私は経理財務統括部の責任者として、その制作プロセスが正当であり、かつ記載内容が正確であることをここに表明いたします。　今後ともステークホルダーの皆様との対話を重視し、より一層開示内容とコミュニケーションの充実を目指してまいります。\n",
+      "執行役員　経理財務統括部長　林　晃司\n",
+      "編集後記\n",
+      "　ASICS統合報告書2020を最後までお読みいただき誠にありがとうございました。　投資家の皆さまをはじめとするステークホルダーの皆さまに、アシックスの中長期的な価値創造についてのご理解を深めていただくことを目的として、本年より統合報告書を発行しています。　初年度の統合報告書作成にあたり、経営企画室、サステナビリティ統括部、法務・知財統括部、経理財務統括部などをはじめとする関係部署とともに、価値創造プロセスの諸資本や創出価値、競争優位性などを洗い出す作業を行いました。その過程において、改めてアシックスの価値の源泉となる経営資源が何であるか、その資源を活用しながらどのようにビジョンを実現していくのかという道筋を描くことができました。　今後もステークホルダーの皆様とより深い対話を通じて、アシックスの財務・非財務の価値をご理解いただきたく思いますので、ぜひ本報告書に関する率直なご意見、ご要望を賜れば幸いです。\n",
+      "ASICS統合報告書2020編集委員会\n",
+      "統合報告書に関するお問い合わせはahq-org-finance-ir-t@asics.comまで\n",
+      "西井　 岳安部　 浩玉田　 貴嗣土井　 俊和福田　 隆介中須賀 幹彦鈴木　 萌佐伯　 日南子小森　 涼太\n",
+      "経理財務統括部経営企画室サステナビリティ統括部法務・知財統括部\n",
+      "山口　聡史大明　篤史宮﨑　真理子原田　啓介岸淵　薫加藤　聡一郎野口　瑞生\n",
+      "井上　聖子増田　堅介佐々　浩史\n",
+      "園部　正歩津川　美夢\n",
+      "\n",
+      "=== タグ: Target_B ===\n",
+      "「ASICS統合報告書2020」の発行にあたって\n",
+      "　アシックスとして初の統合報告書発行にあたり、アシックスの中長期の企業価値創造に関わる重要性の高い情報を網羅的に整理いたしました。その中で特に2020年10月公表した長期ビジョン「VISION2030」、その実現に向けて新たにスタートした「中期経営計画2023」にフォーカスし、外部環境が大きく変化する状況下においてアシックスの進むべき方向性とその実現に向けた戦略をご説明しています。　本報告書は、財務・IRチームが中心となり、関係部署との協力のもとで編集方針や掲載内容を議論しています。私は経理財務統括部の責任者として、その制作プロセスが正当であり、かつ記載内容が正確であることをここに表明いたします。　今後ともステークホルダーの皆様との対話を重視し、より一層開示内容とコミュニケーションの充実を目指してまいります。\n",
+      "執行役員　経理財務統括部長　林　晃司\n",
+      "編集後記\n",
+      "　ASICS統合報告書2020を最後までお読みいただき誠にありがとうございました。　投資家の皆さまをはじめとするステークホルダーの皆さまに、アシックスの中長期的な価値創造についてのご理解を深めていただくことを目的として、本年より統合報告書を発行しています。　初年度の統合報告書作成にあたり、経営企画室、サステナビリティ統括部、法務・知財統括部、経理財務統括部などをはじめとする関係部署とともに、価値創造プロセスの諸資本や創出価値、競争優位性などを洗い出す作業を行いました。その過程において、改めてアシックスの価値の源泉となる経営資源が何であるか、その資源を活用しながらどのようにビジョンを実現していくのかという道筋を描くことができました。　今後もステークホルダーの皆様とより深い対話を通じて、アシックスの財務・非財務の価値をご理解いただきたく思いますので、ぜひ本報告書に関する率直なご意見、ご要望を賜れば幸いです。\n",
+      "ASICS統合報告書2020編集委員会\n",
+      "統合報告書に関するお問い合わせはahq-org-finance-ir-t@asics.comまで\n",
+      "西井　 岳安部　 浩玉田　 貴嗣土井　 俊和福田　 隆介中須賀 幹彦鈴木　 萌佐伯　 日南子小森　 涼太\n",
+      "経理財務統括部経営企画室サステナビリティ統括部法務・知財統括部\n",
+      "山口　聡史大明　篤史宮﨑　真理子原田　啓介岸淵　薫加藤　聡一郎野口　瑞生\n",
+      "井上　聖子増田　堅介佐々　浩史\n",
+      "園部　正歩津川　美夢\n",
+      "\n",
+      "=== タグ: Target_C ===\n",
+      "会社情報/株式情報（2020年12月31日現在）\n",
+      "会社概要株式の状況\n",
+      "株主メモ\n",
+      "主な関係会社\n",
+      "会社名英文表記会社設立事業所\t　本社所在地\n",
+      "　スポーツ工学研究所\n",
+      "　渋谷オフィス\n",
+      "代表者\n",
+      "上場証券取引所事業内容資本金従業員関係会社\n",
+      "発行可能株式総数発行済株式総数株主数大株主（上位10名）\n",
+      "事業年度\t基準日\t\t定時株主総会公告の方法\t\t\n",
+      "単元株数株主名簿管理人・特別口座の口座管理機関同連絡先\t\t\t\t証券コード\n",
+      "株式分布状況（所有者別）株式会社アシックスASICS Corporation1949年9月1日\n",
+      "〒650-8555兵庫県神戸市中央区港島中町7丁目1番1　TEL： 050-1745-2248　FAX：078-303-2241〒651-2271兵庫県神戸市西区高塚台6丁目2番1〒150-0002東京都渋谷区渋谷1丁目2番5号 MFPR渋谷代表取締役会長CEO　尾山　基代表取締役社長COO　廣田　康人東京証券取引所市場第一部各種スポーツ用品等の製造および販売23,972百万円  （2020年12月31日現在）8,904人（連結） （2020年12月31日現在）国内： 10社海外： 52社（米州、欧州、東アジア、東南アジア・南アジア、オセアニア、ほか）（2020年12月31日現在）\n",
+      "790,000,000株189,870,559株33,893名\n",
+      "株主名持株数(千株)持株比率（％）日本マスタートラスト信託銀行株式会社（信託口）13,7007.48株式会社三菱UFJ銀行7,8584.29株式会社日本カストディ銀行（信託口）6,8063.72株式会社三井住友銀行6,6073.61日本生命保険相互会社5,6793.10JP MORGAN CHASE BANK 3856325,4452.97THE BANK OF NEW YORK MELLON 1400444,0572.22STATE STREET BANK AND TRUST COMPANY 5050013,7622.06バークレイズ証券株式会社3,2531.78株式会社日本カストディ銀行（信託口7）2,9171.59\n",
+      "1月1日から12月31日まで中間配当 6月30日期末配当 12月31日毎年3月中電子公告により行う公告掲載URLhttps://corp.asics.com/jp/investor_relations/library/electronic_public_notice\n",
+      "100株\n",
+      "三菱UFJ信託銀行株式会社\n",
+      "三菱UFJ信託銀行株式会社　大阪証券代行部〒541-8502大阪市中央区伏見町三丁目6番3号TEL：0120-094-777（通話料無料）7936\n",
+      "（注）１．持株比率は、自己株式を除いて計算しています。２．当社は、自己株式6,827千株を保有していますが、上記大株主からは除外しています。\n",
+      "アシックスジャパン株式会社アシックスアメリカコーポレーションアシックスヨーロッパB.V.亞瑟士（中国）商貿有限公司アシックスオセアニアPTY.LTD.アシックスアジアPTE.LTD.\n",
+      "アシックスブラジルリミターダアシックスコリアコーポレーションホグロフスAB山陰アシックス工業株式会社アシックスアパレル工業株式会社アシックスデジタル Inc.Race Roster1．未受領の配当金につきましては、三菱UFJ信託銀行本支店でお支払いいたします。 2．特別口座に記録された株式に関する各種お手続きにつきましては、上記特別口座の座管理機関（三菱UFJ信託銀行）にお問合せください。3．株主様の住所変更、買取請求その他各種お手続きにつきましては、口座を開設されている証券会社等にお問合せください。\n",
+      "（ただし、事故その他やむをえない事由によって電子公告による公告ができない場合は、日本経済新聞に掲載する方法により行います。）\n",
+      "金融機関36.7%\n",
+      "証券会社5.3%\n",
+      "その他国内法人6.8%\n",
+      "外国法人等38.7%\n",
+      "個人その他12.5%\n",
+      "\n",
+      "「ASICS統合報告書2020」の発行にあたって\n",
+      "　アシックスとして初の統合報告書発行にあたり、アシックスの中長期の企業価値創造に関わる重要性の高い情報を網羅的に整理いたしました。その中で特に2020年10月公表した長期ビジョン「VISION2030」、その実現に向けて新たにスタートした「中期経営計画2023」にフォーカスし、外部環境が大きく変化する状況下においてアシックスの進むべき方向性とその実現に向けた戦略をご説明しています。　本報告書は、財務・IRチームが中心となり、関係部署との協力のもとで編集方針や掲載内容を議論しています。私は経理財務統括部の責任者として、その制作プロセスが正当であり、かつ記載内容が正確であることをここに表明いたします。　今後ともステークホルダーの皆様との対話を重視し、より一層開示内容とコミュニケーションの充実を目指してまいります。\n",
+      "執行役員　経理財務統括部長　林　晃司\n",
+      "編集後記\n",
+      "　ASICS統合報告書2020を最後までお読みいただき誠にありがとうございました。　投資家の皆さまをはじめとするステークホルダーの皆さまに、アシックスの中長期的な価値創造についてのご理解を深めていただくことを目的として、本年より統合報告書を発行しています。　初年度の統合報告書作成にあたり、経営企画室、サステナビリティ統括部、法務・知財統括部、経理財務統括部などをはじめとする関係部署とともに、価値創造プロセスの諸資本や創出価値、競争優位性などを洗い出す作業を行いました。その過程において、改めてアシックスの価値の源泉となる経営資源が何であるか、その資源を活用しながらどのようにビジョンを実現していくのかという道筋を描くことができました。　今後もステークホルダーの皆様とより深い対話を通じて、アシックスの財務・非財務の価値をご理解いただきたく思いますので、ぜひ本報告書に関する率直なご意見、ご要望を賜れば幸いです。\n",
+      "ASICS統合報告書2020編集委員会\n",
+      "統合報告書に関するお問い合わせはahq-org-finance-ir-t@asics.comまで\n",
+      "西井　 岳安部　 浩玉田　 貴嗣土井　 俊和福田　 隆介中須賀 幹彦鈴木　 萌佐伯　 日南子小森　 涼太\n",
+      "経理財務統括部経営企画室サステナビリティ統括部法務・知財統括部\n",
+      "山口　聡史大明　篤史宮﨑　真理子原田　啓介岸淵　薫加藤　聡一郎野口　瑞生\n",
+      "井上　聖子増田　堅介佐々　浩史\n",
+      "園部　正歩津川　美夢\n"
+     ]
+    }
+   ],
    "source": [
     "import xml.etree.ElementTree as ET\n",
     "import html\n",
     "import re\n",
     "import pandas as pd\n",
     "\n",
-    "def load_target_keywords(csv_path):\n",
-    "    df = pd.read_csv(csv_path)\n",
-    "    # target==1のkeywordのみ抽出してリスト化\n",
-    "    target_keywords = df.loc[df['target'] == 1, 'keyword'].dropna().tolist()\n",
-    "    return target_keywords\n",
+    "def load_target_keywords(df, target_column):\n",
+    "    # 対象列で1が立っているキーワードのみ取得\n",
+    "    # strip()で空白除去してからリスト化\n",
+    "    return [k.strip() for k in df.loc[df[target_column] == 1, 'keyword'].dropna().tolist()]\n",
+    "\n",
     "\n",
     "def extract_content_by_keywords(xml_path, keywords):\n",
     "    tree = ET.parse(xml_path)\n",
     "    root = tree.getroot()\n",
-    "\n",
     "    collected_text = []\n",
     "\n",
     "    for page in root.findall('page'):\n",
     "        tag_elem = page.find('tag')\n",
     "        content_elem = page.find('content')\n",
     "\n",
-    "        if tag_elem is not None:\n",
-    "            tag_text = html.unescape(tag_elem.text)  # ←ここがポイント！\n",
+    "        if tag_elem is not None and content_elem is not None:\n",
+    "            tag_text = html.unescape((tag_elem.text or \"\").strip())\n",
     "\n",
-    "            if any(k in tag_text for k in keywords):\n",
+    "            # タグをカンマや全角カンマで分割し、前後の空白も削除\n",
+    "            tag_list = [t.strip() for t in re.split(r'[、,]', tag_text) if t.strip()]\n",
+    "\n",
+    "            # いずれかのタグがキーワードに完全一致するか\n",
+    "            if any(tag in keywords for tag in tag_list):\n",
     "                raw_text = content_elem.text\n",
     "                if raw_text:\n",
     "                    decoded_text = html.unescape(raw_text)\n",
@@ -41,22 +123,29 @@
     "\n",
     "    return '\\n\\n'.join(collected_text)\n",
     "\n",
+    "\n",
     "# --- 使用例 ---\n",
-    "xml_file = \"ir/2025/20020_日清製粉グループ本社/Gx5z.xml\"\n",
-    "csv_file = \"ir/2025/20020_日清製粉グループ本社/info/target_tag.csv\"\n",
     "\n",
-    "# CSVから対象キーワードを読み込み\n",
-    "keywords = load_target_keywords(csv_file)\n",
+    "#xml_file = \"ir/2025/79360_アシックス/file.xml\"\n",
+    "#csv_file = \"ir/2025/79360_アシックス/info/contents.csv\"\n",
+    "xml_file = \"ir/2025/79360_アシックス_2020/アシックス統合報告書2020.xml\"\n",
+    "csv_file = \"ir/2025/79360_アシックス_2020/info/contents.csv\"\n",
     "\n",
-    "# XMLからテキスト抽出\n",
-    "output_text = extract_content_by_keywords(xml_file, keywords)\n",
+    "# 除外対象列\n",
+    "excluded_columns = ['keyword', 'page', 'origin', '表示']\n",
     "\n",
-    "# 出力\n",
-    "print(output_text)\n",
+    "# CSVを読み込む\n",
+    "df = pd.read_csv(csv_file)\n",
     "\n",
-    "# 必要に応じてファイル出力\n",
-    "#with open(\"extracted_text.txt\", \"w\", encoding=\"utf-8\") as f:\n",
-    "#    f.write(output_text)\n"
+    "# 対象の列を動的に抽出\n",
+    "target_columns = [col for col in df.columns if col not in excluded_columns]\n",
+    "\n",
+    "# 各ターゲット列について順に処理\n",
+    "for col in target_columns:\n",
+    "    print(f\"\\n=== タグ: {col} ===\")\n",
+    "    keywords = load_target_keywords(df, col)\n",
+    "    output_text = extract_content_by_keywords(xml_file, keywords)\n",
+    "    print(output_text)\n"
    ]
   }
  ],
