--- a/M-col-PDF2TXT_from_list.ipynb
+++ b/M-col-PDF2TXT_from_list.ipynb
@@ -295,7 +295,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processing ir/2025/72760_小糸製作所/8d0b34baa07db41a5a718ac9ec40e985ba10138f.pdf\n",
+      "Processing ir/2025/79360_アシックス_2022/アシックス統合報告書2022.pdf\n",
       "処理が終了しました。\n"
      ]
     }
@@ -325,7 +325,7 @@
     "        #=========================================================================================\n",
     "        #-----------------------------------------------------------------------------------------\n",
     "        #単独処理：格納フォルダ、統合報告書PDFのファイル名、行間設定を指定\n",
-    "        temp_list = ['72760_小糸製作所', '8d0b34baa07db41a5a718ac9ec40e985ba10138f.pdf', 2]\n",
+    "        temp_list = ['79360_アシックス_2022', 'アシックス統合報告書2022.pdf', 2]\n",
     "        df_target = pd.DataFrame([temp_list],columns=['格納フォルダ','統合報告書PDF','行間設定'])\n",
     "        #-----------------------------------------------------------------------------------------\n",
     "        #=========================================================================================\n",
@@ -447,7 +447,15 @@
     "            cleaned_text[page_number +1] = re.sub(r\"[ʝ\u0007\u0001\b\u0003\u001f\u001e",
     "\u001d",
     "\u001c",
-    "\u001b\u001a\u0019\u001a\u0018\u001b\u0017\u0016\u0017\u0015]+\", \"\", tmp_text)\n",
+    "\u001b\u001a\u0019\u001a\u0018\u001b\u0017\u0016\u0017\u0015\u000f\u0013\u0014\u0010\u0011\u0012\u0004\u000e\u0006\f",
+    "\u000b",
+    "]+\", \"\", tmp_text)\n",
+    "            #cleaned_text[page_number +1] = re.sub(r\"[ʝ\u0007\u0001\b\u0003\u001f\u001e",
+    "\u001d",
+    "\u001c",
+    "\u001b\u001a\u0019\u001a\u0018\u001b\u0017\u0016\u0017\u0015\u000f\u0013\u0014\u0010\u0011\u0012\u0004\u000e\u0006\f",
+    "ػମ࣌ࣄۀʢ݄ൃද࣌]+\", \"\", tmp_text)\n",
+    "\n",
     "            #====================================\n",
     "            \n",
     "            cleaned_raw_text += cleaned_text[page_number +1]\n",
