--- a/Extract_Pdf_Attrib_from_list.ipynb
+++ b/Extract_Pdf_Attrib_from_list.ipynb
@@ -65,73 +65,93 @@
     "    try:\n",
     "        # PDFを開く\n",
     "        doc = fitz.open(pdf_path)\n",
-    "        \n",
+    "\n",
     "        # ページ番号が正しいか確認\n",
     "        if page_number < 1 or page_number > len(doc):\n",
     "            print(f\"エラー: ページ番号が総ページ数{len(doc)}を超えています。最終ページを対象に処理を進めます。\")\n",
     "            logging.warning(f\"ページ番号が総ページ数{len(doc)}を超えています。最終ページを対象に処理を進めます。\")\n",
     "            page_number = len(doc)\n",
+    "       \n",
     "        \n",
     "        # 対象ページを取得（0インデックス）\n",
     "        page = doc[page_number - 1]\n",
     "        \n",
     "        # ページ内のブロックを取得\n",
     "        blocks = page.get_text(\"dict\")[\"blocks\"]\n",
-    "        \n",
-    "        # データ保持用リスト\n",
-    "        data = []\n",
-    "        \n",
-    "        for block_no, block in enumerate(blocks, start=1):\n",
-    "            if \"lines\" not in block:\n",
-    "                continue  # ブロックに行がない場合はスキップ\n",
+    "\n",
+    "        if blocks:\n",
+    "            # データ保持用リスト\n",
+    "            data = []\n",
     "            \n",
-    "            for line_no, line in enumerate(block[\"lines\"], start=1):\n",
-    "                if \"spans\" not in line:\n",
-    "                    continue  # 行にスパンがない場合はスキップ\n",
+    "            for block_no, block in enumerate(blocks, start=1):\n",
+    "                if \"lines\" not in block:\n",
+    "                    continue  # ブロックに行がない場合はスキップ\n",
     "                \n",
-    "                for span_no, span in enumerate(line[\"spans\"], start=1):\n",
-    "                    # 各スパンの属性を取得\n",
-    "                    text = span.get(\"text\", \"\")\n",
-    "                    bbox = line[\"bbox\"]\n",
-    "                    font = span.get(\"font\", \"\")\n",
-    "                    size = span.get(\"size\", \"\")\n",
-    "                    color = span.get(\"color\", \"\")\n",
-    "                    text_type = span.get(\"flags\", \"\")\n",
-    "                    origin = span.get(\"origin\", (None, None))  # originを取得\n",
-    "                    ascender = span.get(\"ascender\", None)      # ascenderを取得\n",
+    "                for line_no, line in enumerate(block[\"lines\"], start=1):\n",
+    "                    if \"spans\" not in line:\n",
+    "                        continue  # 行にスパンがない場合はスキップ\n",
     "                    \n",
-    "                    # データをリストに追加\n",
-    "                    data.append({\n",
-    "                        \"page_no\": page_number,\n",
-    "                        \"block_no\": block_no,\n",
-    "                        \"line_no\": line_no,\n",
-    "                        \"span_no\": span_no,\n",
-    "                        \"text\": text,\n",
-    "                        \"origin_x\": origin[0],\n",
-    "                        \"origin_y\": origin[1],\n",
-    "                        \"bbox_x0\": bbox[0],\n",
-    "                        \"bbox_y0\": bbox[1],\n",
-    "                        \"bbox_x1\": bbox[2],\n",
-    "                        \"bbox_y1\": bbox[3],\n",
-    "                        \"font\": font,\n",
-    "                        \"size\": size,\n",
-    "                        \"color\": color,\n",
-    "                        \"text_type\": text_type,\n",
-    "                        \"ascender\": ascender,\n",
-    "                    })\n",
-    "        \n",
-    "        # PDFを閉じる\n",
-    "        doc.close()\n",
-    "        \n",
-    "        # pandasデータフレームに変換\n",
-    "        df = pd.DataFrame(data)\n",
-    "        \n",
-    "        # CSVとして出力\n",
-    "        df.to_csv(output_csv_path, index=False, encoding=\"utf-8-sig\")\n",
-    "        #print(f\"ターゲットページの属性情報がCSVに出力されました: {output_csv_path}\")\n",
-    "        logging.info(f\"ターゲットページの属性情報がCSVに出力されました: {output_csv_path}\")\n",
-    "        return df\n",
-    " \n",
+    "                    for span_no, span in enumerate(line[\"spans\"], start=1):\n",
+    "                        # 各スパンの属性を取得\n",
+    "                        text = span.get(\"text\", \"\")\n",
+    "                        bbox = line.get(\"bbox\")\n",
+    "                        if bbox:\n",
+    "                            bbox_x0 = bbox[0]\n",
+    "                            bbox_y0 = bbox[1]\n",
+    "                            bbox_x1 = bbox[2]\n",
+    "                            bbox_y1 = bbox[3]\n",
+    "                        else:\n",
+    "                            bbox_x0 = None\n",
+    "                            bbox_y0 = None\n",
+    "                            bbox_x1 = None\n",
+    "                            bbox_y1 = None\n",
+    "                        font = span.get(\"font\", \"\")\n",
+    "                        size = span.get(\"size\", \"\")\n",
+    "                        color = span.get(\"color\", \"\")\n",
+    "                        text_type = span.get(\"flags\", \"\")\n",
+    "                        origin = span.get(\"origin\", (None, None))  # originを取得\n",
+    "                        ascender = span.get(\"ascender\", None)      # ascenderを取得\n",
+    "\n",
+    "                        #print(bbox[0])\n",
+    "                        #print(bbox[1])\n",
+    "                        #print(bbox[2])\n",
+    "                        #print(bbox[3])\n",
+    "                        \n",
+    "                        # データをリストに追加\n",
+    "                        data.append({\n",
+    "                            \"page_no\": page_number,\n",
+    "                            \"block_no\": block_no,\n",
+    "                            \"line_no\": line_no,\n",
+    "                            \"span_no\": span_no,\n",
+    "                            \"text\": text,\n",
+    "                            \"origin_x\": origin[0],\n",
+    "                            \"origin_y\": origin[1],\n",
+    "                            \"bbox_x0\": bbox_x0,#bbox[0],\n",
+    "                            \"bbox_y0\": bbox_y0,#bbox[1],\n",
+    "                            \"bbox_x1\": bbox_x1,#bbox[2],\n",
+    "                            \"bbox_y1\": bbox_y1,#bbox[3],\n",
+    "                            \"font\": font,\n",
+    "                            \"size\": size,\n",
+    "                            \"color\": color,\n",
+    "                            \"text_type\": text_type,\n",
+    "                            \"ascender\": ascender,\n",
+    "                        })\n",
+    "            \n",
+    "            # PDFを閉じる\n",
+    "            doc.close()\n",
+    "            \n",
+    "            # pandasデータフレームに変換\n",
+    "            df = pd.DataFrame(data)\n",
+    "            \n",
+    "            # CSVとして出力\n",
+    "            df.to_csv(output_csv_path, index=False, encoding=\"utf-8-sig\")\n",
+    "            #print(f\"ターゲットページの属性情報がCSVに出力されました: {output_csv_path}\")\n",
+    "            logging.info(f\"ターゲットページの属性情報がCSVに出力されました: {output_csv_path}\")\n",
+    "            return df\n",
+    "        else:\n",
+    "            print(f\"警告: ページ {page_number} にテキストブロックが見つかりませんでした。\")\n",
+    "            logging.warning(f\"ページ {page_number} にテキストブロックが見つかりませんでした。\")\n",
+    "     \n",
     "    except Exception as e:\n",
     "        print(f\"extract_pdf_attributesでエラーが発生しました: {e}\")\n",
     "        logging.error(f\"extract_pdf_attributesでエラーが発生しました: {e}\")\n",
@@ -321,8 +341,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reading ir/2025/69760_太陽誘電/EpSk.pdf \n",
-      "Reading ir/2025/69760_太陽誘電/EpSk.pdf \n",
+      "Reading ir/2025/41510_協和キリン/Integrated report 2024_JP.pdf \n",
       "処理が終了しました。\n"
      ]
     }
@@ -338,7 +357,8 @@
     "    #csv_path = 'data/Attrib_Analysis_Target_20250218b.csv'\n",
     "    #csv_path = 'data/Attrib_Analysis_Target_20250218c.csv'\n",
     "    #csv_path = 'data/Attrib_Analysis_Target_20250314.csv'\n",
-    "    csv_path = 'data/Attrib_Analysis_Target_20250408.csv'\n",
+    "    #csv_path = 'data/XML作成準備_20250425.csv'\n",
+    "    csv_path = 'data/Attrib_Analysis_Target_20250508.csv'\n",
     "    \n",
     "\n",
     "    # CSVを読み込む\n",
@@ -367,8 +387,9 @@
     "        #前処理（フォルダの確認・パス名の定義　等）\n",
     "        folder_name = 'ir/2025/' + row[folder_col]\n",
     "        file_name = row[file_col]\n",
-    "        target_page = row[target_col]\n",
-    "\n",
+    "        target_page_tmp = row[target_col]\n",
+    "        target_page = int(target_page_tmp)\n",
+    "        \n",
     "        # パスが有効かチェック\n",
     "        #　file_pathを作成してfile_pathsにリストとして追記・保存するが、必要情報がない場合は''としておく\n",
     "        if pd.isna(folder_name) or pd.isna(file_name):\n",
