--- a/M-col-PDF2TXT_from_list.ipynb
+++ b/M-col-PDF2TXT_from_list.ipynb
@@ -295,7 +295,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processing ir/2025/79360_アシックス_2022/アシックス統合報告書2022.pdf\n",
+      "Processing ir/2025/68410_横河電機/ir_2024yreports.pdf\n",
       "処理が終了しました。\n"
      ]
     }
@@ -312,7 +312,7 @@
     "        # CSVファイルのパスを指定\n",
     "        #csv_path = 'data/Attrib_Analysis_Target_20250114_test.csv'  # CSVのパスを指定\n",
     "        #csv_path = 'data/Attrib_Analysis_Target_20250219_Denka.csv'  # CSVのパスを指定\n",
-    "        csv_path = 'data/Attrib_Analysis_Target_20250228_temp.csv'  # CSVのパスを指定\n",
+    "        csv_path = 'data/Attrib_Analysis_Target_20250508.csv'  # CSVのパスを指定\n",
     "\n",
     "        # 統合報告書がリストされたCSVを読み込む\n",
     "        df_target = load_csv(csv_path)\n",
@@ -325,7 +325,7 @@
     "        #=========================================================================================\n",
     "        #-----------------------------------------------------------------------------------------\n",
     "        #単独処理：格納フォルダ、統合報告書PDFのファイル名、行間設定を指定\n",
-    "        temp_list = ['79360_アシックス_2022', 'アシックス統合報告書2022.pdf', 2]\n",
+    "        temp_list = ['68410_横河電機', 'ir_2024yreports.pdf', 2]\n",
     "        df_target = pd.DataFrame([temp_list],columns=['格納フォルダ','統合報告書PDF','行間設定'])\n",
     "        #-----------------------------------------------------------------------------------------\n",
     "        #=========================================================================================\n",
@@ -449,7 +449,7 @@
     "\u001c",
     "\u001b\u001a\u0019\u001a\u0018\u001b\u0017\u0016\u0017\u0015\u000f\u0013\u0014\u0010\u0011\u0012\u0004\u000e\u0006\f",
     "\u000b",
-    "]+\", \"\", tmp_text)\n",
+    "\u0012\u000e\u0018\u001a\u0018\u000f\u0019\u0010\u0006\u000e\u0013\u0017\u0014]+\", \"\", tmp_text)\n",
     "            #cleaned_text[page_number +1] = re.sub(r\"[ʝ\u0007\u0001\b\u0003\u001f\u001e",
     "\u001d",
     "\u001c",
